--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="[reszponzív weblap]">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>BM blogja</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Roboto:300&display=swap" rel="stylesheet">
 </head>
@@ -21,21 +22,24 @@
             <h2>A Cool Article About Something Edgy</h2>
             <img class="picture" src="http://i.imgur.com/rGWSW9i.jpg" alt="A Cool Article About Something Edgy">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec nibh. Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam malesuada et lectus vel
-                pellentesque.</p>
+                pellentesque.
+            </p>
             <a href="#">Read more</a>
         </article>
         <article class=post>
             <h2>A Strong Opinion On a Thing That Just Happened</h2>
             <img class="picture" src="http://i.imgur.com/JS1RcVU.jpg" alt="A Strong Opinion On a Thing That Just Happened">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec nibh. Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam malesuada et lectus vel
-                pellentesque.</p>
+                pellentesque.
+            </p>
             <a href="#">Read more</a>
         </article>
         <article class=post>
             <h2>A Listicle For You and Your Boyfriend</h2>
             <img class="picture" src="http://i.imgur.com/q80S4Ro.jpg" alt="A Listicle For You and Your Boyfriend">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec nibh. Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam malesuada et lectus vel
-                pellentesque.</p>
+                pellentesque.
+            </p>
             <a href="#">Read more</a>
         </article>
         <a href="#">Load more stories...</a>
